fixed texts overflowing

--- a/src/style.css
+++ b/src/style.css
@@ -386,9 +386,9 @@ h6 {
     font-weight: 400;
     font-size: 39px;
     color: #FFFFFF;
-    word-break: break-all;
     word-break: normal;
     overflow-wrap: break-word;
+    width: 100%;
 }
 
 .question-quizz,
@@ -423,6 +423,7 @@ h6 {
     display: flex;
     align-items: center;
     justify-content: center;
+    word-break: break-all;
 }
 
 .resultado-title {
@@ -438,6 +439,7 @@ h6 {
     mix-blend-mode: difference;
     word-break: normal;
     overflow-wrap: break-word;
+    width: 100%;
 }
 
 .resultado-title p {
@@ -457,6 +459,7 @@ h6 {
     display: flex;
     flex-direction: column;
     transition: 100ms;
+    word-break: break-all;
 }
 
 .image-question img {
@@ -476,6 +479,7 @@ h6 {
     word-break: normal;
     overflow-wrap: break-word;
     transition: 100ms;
+    width: 100%;
 }
 
 .resultado-imagem-text {
